Revert "fix(footer): hide privacy policy and legal notice section on mobile devices"
This reverts commit 72682bcca612c76059b36a2ef9b4f0c2822c4773.

--- a/src/app/shared/footer/footer.scss
+++ b/src/app/shared/footer/footer.scss
@@ -201,7 +201,17 @@
   text-wrap: nowrap;
 
   @media (max-width: 1024px) {
-    display: none;
+    flex-direction: row;
+    margin: 48px 20px 0 0;
+    justify-content: center;
+    align-items: center;
+    gap: 10%;
+    text-wrap: nowrap;
+
+    @media (max-width: 380px) {
+      gap: 15px;
+      white-space: wrap;
+    }
   }
 
   a {
